--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="middle">
                         <h1>How to send a<br> <span>package with</span> Alirok</h1>
                     <div class="middle-block1">
-                        <img src="/img/el3.png" alt="">
+                        <img src="./img/el3.png" alt="">
                         <div class="block1-body">
                             <div class="block1-body-icon"><img src="img/lock.svg" alt=""> 1 Quotone</div>
                             <div class="block1-body-text">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="middle-block2">
-                        <img class="circle2" src="/img/el2.png" alt="">
+                        <img class="circle2" src="./img/el2.png" alt="">
                         <div class="block1-body">
                             <div class="block2-body-icon"><img src="img/rocket.svg" alt="">Book</div>
                             <div class="block2-body-text">
