--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="container-footer">
                 <div class="footer">
                     <div class="logo-footer">
-                        <img class="logo-footer-img" src="/img/logo_cargo.svg" alt="">
+                        <img class="logo-footer-img" src="./img/logo_cargo.svg" alt="">
                         <h4 class="h-logo-footer">Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry</h4>
                     </div>
                     <div class="nav-company">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="footer-social">
                         <div class="social">
-                            <img src="/img/facebook.svg" alt=""><img src="img/instagram.svg" alt=""><img src="img/twitter.svg" alt="">
+                            <img src="./img/facebook.svg" alt=""><img src="img/instagram.svg" alt=""><img src="img/twitter.svg" alt="">
                         </div>
                         <div class="soc-text">
                             <h4 class="soc-h">Discover our app</h4>
