--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="footer-social">
                         <div class="social">
-                            <img src="./img/facebook.svg" alt=""><img src="img/instagram.svg" alt=""><img src="img/twitter.svg" alt="">
+                            <img src="./img/facebook.svg" alt=""><img src="./img/instagram.svg" alt=""><img src="./img/twitter.svg" alt="">
                         </div>
                         <div class="soc-text">
                             <h4 class="soc-h">Discover our app</h4>
